# gh-usage

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: release.yml
design/: CHANGELOG.zh-CN.md  README.zh-CN.md  report-mockup.html
scripts/: build-release.ps1  examples.ps1  publish-winget.md  publish-winget.ps1
src/: main.rs  report-template.html  snapdom.js
