[package]
name = "gh-usage"
version = "1.2.1"
edition = "2024"
license = "MIT"
authors = ["gh-usage contributors"]
description = "Local GitHub Copilot usage scanner and credit usage exporter"
repository = ""
readme = "README.md"

[[bin]]
name = "gh-usage"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
memchr = "2.7"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
	"Win32_Foundation",
	"Win32_System_Console",
	"Win32_System_Diagnostics_ToolHelp",
] }

[profile.release]
opt-level = "z"     # optimize aggressively for size
lto = true          # link-time optimization across all crates
codegen-units = 1   # better cross-module optimization (smaller, slower build)
panic = "abort"     # drop unwinding tables/landing pads
strip = true        # strip symbols/debug info from the binary
